Fix squire editor toolbar list button popup overflow

--- a/core/app/shell/src/themes/suite8/css/layout/_scrollbar.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_scrollbar.scss
@@ -42,7 +42,6 @@
 }
 
 .scrollbar-thin {
-  overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 5px;
